--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@google/model-viewer": "^4.0.0",
+    "axios": "^1.8.3",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
