--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.0.0",
     "react-loading-skeleton": "^3.5.0",
     "swiper": "^11.2.5",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
