--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,7 @@
   "printWidth": 80,
   "tabWidth": 2,
   "endOfLine": "lf",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
