--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "npx prettier --write . && next build",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky"
@@ -14,6 +14,7 @@
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "axios": "^1.8.3",
+    "lottie-react": "^2.4.1",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
