--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@google/model-viewer": "^4.0.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "axios": "^1.8.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.541.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-loading-skeleton": "^3.5.0",
     "swiper": "^11.2.5",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.174.0",
     "zustand": "^5.0.5"
   },
