--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@google/model-viewer": "^4.0.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.0.4",
@@ -23,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^10.1.0",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.3.1",
     "three": "^0.174.0",
